feat(api): generate warung code during provisioning
